nanposweb/static/custom.css
body {
    font-family: 'Open Sans', sans-serif;
}

main > .container {
    padding-top: 9px;
    padding-bottom: 65px;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

/* Firefox */
input[type=number] {
    -moz-appearance: textfield;
}

footer > div > div > div > a {
    text-decoration: none;
}

footer > div > div > div > a:hover {
    text-decoration: underline;
}

